# embassy_serial_dummy

./: Cargo.toml  README.md
src/: main.rs
