[package]
name = "embassy_serial_dummy"
version = "0.1.0"
authors = ["yum <yumzi114@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = "1.1.2"

embassy-executor = "0.5.0"
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.2", features = ["generic-queue-8"] }
embedded-io-async = "0.6.1"
esp-backtrace = { version = "0.13.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = ["async", "embassy-executor-thread", "embassy-time-timg0", "esp32c3"] }
esp-println = { version = "0.10.0", features = ["esp32c3", "log"] }
heapless = "0.8.0"
lcd1602-driver = "0.2.0"
log = { version = "0.4.21" }
portable-atomic = "1.7.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
